   	handles CNAME -> A redirections.

   +	XCLIENT support http://www.postfix.org/XCLIENT_README.html


--2.2.20--

   *	Requires Libsnert 1.71.5

   +	Add mail-bl, mail-bl-headers, mail-bl-max options.

   -	Removed stat mail-strict-pass.

   -	Removed smtp-disconnect-after-dot; left over version 1 dupmsg
	handling. Cause version 2 dupmsg handling to break when enabled.

--2.2.19--

   +	Added mail-strict option to validate the free mail sender
   	originated from a free mail server.

   !	nsListLookup0: was recursing if both NS and an SOA was returned
	with the initial NS lookup. This would incorrectly cause a 2nd
	lookup on the SOA domain.

   !	Added per message bad recipient counter for X-Smtpf-Report.

--2.2.18--

   *	Requires Libsnert 1.71.3

   !	uribl.c: Corrections for testing redirections in (pseudo) query
	string elements.

   !	uribl.c: set MSG_POLICY for URI blocked content to disable
   	click white listing.

   !	uriblCheckUri: if the guard check for a valid TLD fails, then
   	also check if the URI host is instead an IP address.

--2.2.17--

   *	Requires Libsnert 1.71.1

   !	grey.c: Changes to corresponding to MIME API overhaul.

--2.2.16--

   !	examples/Makefile.in: fix access.cf rule to use kvmap -b.

   !	accessTagWordsMap, accessWordTagsMap: changed emew: tag to allow
   	an empty RHS.

   !	clamd.c: added addition log information to message #188 (sscanf
	return code and buffer length). Quentin Campbell has been
	reporting instances "clamd sesssion port parse error" with clamd
	0.94.2 and 0.95. On mx.snert.net with 0.95, no such error
	appears. Current theory is that clamd is being restarted while
	in the process of transmitting the PORT response line and thus
	truncating the output.

	Another sign of this would be message #186 "clamd read error",
	with a disconnect related error, which would occur if the clamd
	restart happened before any (partial) data was read.

   !	cmdUnknown, smtp-drop-unknown: allow for Postfix's XCLIENT extension